# azure-dashboard

./: .gitignore  README.md
azure-dashboard-client/: .env  .eslintignore  .eslintrc.cjs  .prettierrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
azure-dashboard-client/src/: App.svelte  main.ts
azure-dashboard-client/src/apis/: api-utils.ts  get-dashboard.ts  get-database-usage.ts  get-elastic-pool-usage.ts
azure-dashboard-client/src/components/: Dashboard.svelte  Database.svelte  ElasticPool.svelte  Home.svelte  LoadingSpinner.svelte  ResourceGroup.svelte  SubPage.svelte  Subscription.svelte  UsageGauge.svelte  index.ts
azure-dashboard-client/src/components/toast/: Toast.svelte  ToastContainer.svelte  index.ts  toastStores.ts
azure-dashboard-client/src/css/: site.scss
azure-dashboard-server/: .gitignore  Cargo.toml  config.json  log4rs.yaml
azure-dashboard-server/src/: azure_token_cache.rs  errors.rs  main.rs  settings.rs  static_file_handlers.rs
azure-dashboard-server/src/azure_apis/: get_database_usage.rs  get_elastic_pool.rs  list_databases_in_elastic_pool.rs  mod.rs
azure-dashboard-server/src/routes/: dashboard.rs  database.rs  database_usage.rs  elastic_pool.rs  elastic_pool_usage.rs  mod.rs
