[package]
name = "azure-dashboard-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.2"
actix-files = "0.6.2"
actix-web = "4.1.0"
anyhow = "1.0.60"
chrono = { version = "0.4.20", features = [ "serde" ] }
config = "0.13.2"
derive_more = "0.99.17"
futures = "0.3.21"
log = "0.4.17"
log4rs = "1.1.1"
once_cell = "1.13.0"
reqwest = { version="0.11.11", features=["json"] }
serde = { version="1.0.142", features=["derive"] }
serde_json = "1.0.83"
thiserror = "1.0.32"